# vs-dpir-ncnn

./: README.md  pyproject.toml
vsdpir_ncnn/: __init__.py  __main__.py
